# bouncy_simulation

./: Cargo.toml  README.md  build.rs
src/: balls.rs  components.rs  constants.rs  main.rs  ring.rs  setup.rs  trails.rs  ui.rs
